CRUD Titulares en el frontend configuracion completa de datatables

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
   <!--Custom JavaScript -->
   <script src="./assets/js/custom.js"></script>
 
-  <script src="./assets/plugins/datatables/jquery.dataTables.min.js"></script>
+  <!-- <script src="./assets/plugins/datatables/jquery.dataTables.min.js"></script> -->
 
   <!-- ============================================================== -->
   <!-- Style switcher -->
