--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
   <!-- Bootstrap Core CSS -->
   <link href="./assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Date picker plugins css -->
+  <link href="./assets/plugins/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" type="text/css" />
+
   <!-- page css -->
   <link href="./assets/css/pages/login-register-lock.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -56,6 +60,13 @@
   <!--Custom JavaScript -->
   <script src="./assets/js/custom.js"></script>
 
+  <!-- Date Picker Plugin JavaScript -->
+  <script src="./assets/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+
+  <!-- Para el idioma en español -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/locales/bootstrap-datepicker.es.min.js"></script>
+
   <!-- <script src="./assets/plugins/datatables/jquery.dataTables.min.js"></script> -->
 
   <!-- ============================================================== -->
@@ -78,6 +89,7 @@
       $("#loginform").slideUp();
       $("#recoverform").fadeIn();
     });
+
 
   </script>
 
