--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <!-- Date picker plugins css -->
   <link href="./assets/plugins/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" type="text/css" />
 
+  <link href="./assets/plugins/select2/dist/css/select2.min.css" rel="stylesheet" type="text/css" />
+
   <!-- page css -->
   <link href="./assets/css/pages/login-register-lock.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -59,6 +61,8 @@
   <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!--Custom JavaScript -->
   <script src="./assets/js/custom.js"></script>
+
+  <script src="./assets/plugins/select2/dist/js/select2.full.min.js" type="text/javascript"></script>
 
   <!-- Date Picker Plugin JavaScript -->
   <script src="./assets/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
