--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,10 @@
 
   <!-- page css -->
   <link href="./assets/css/pages/login-register-lock.css" rel="stylesheet">
+
   <!-- Custom CSS -->
   <link href="./assets/css/style.css" rel="stylesheet">
-
+  <link href="./assets/css/icons/font-awesome/css/font-awesome.css" rel="stylesheet">
 
   <!-- You can change the theme colors from here -->
   <!-- <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet"> -->
@@ -62,7 +63,6 @@
   <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!--Custom JavaScript -->
   <script src="./assets/js/custom.js"></script>
-
 
 
   <script src="./assets/plugins/select2/dist/js/select2.full.min.js" type="text/javascript"></script>
